--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_NAME=Nest API Template
 APP_HOST=localhost
 PORT=3000
 
+JWT_SECRET=MySecret
+JWT_EXPIRATION=1d
+
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
