--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/config/connection-source.ts",
+    "migration:generate": "npm run typeorm -- -d ./src/config/connection-source.ts migration:generate ./src/migrations/%npm_config_name%",
+    "migration:create": "npm run typeorm -- migration:create ./src/migrations/%npm_config_name%",
+    "migration:revert": "npm run typeorm -- -d ./src/config/connection-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "10.3.9",
@@ -32,6 +37,7 @@
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "dotenv": "16.4.5",
     "joi": "17.13.1",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
