feat: add cloudinary credentials

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DB_USER=postgres
 DB_PASSWORD=MyPassword
 DB_NAME=NestAPI
 DB_SYNCHRONIZE=false
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
