--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cloudinary": "2.2.0",
     "dotenv": "16.4.5",
     "joi": "17.13.1",
+    "nanoid": "3.3.7",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -58,6 +60,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
+    "@types/multer": "1.4.11",
     "@types/node": "20.14.2",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "1.0.38",
