--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "migration:drop": "npm run typeorm -- -d ./src/config/connection-source.ts schema:drop"
   },
   "dependencies": {
+    "@nestjs/axios": "3.0.2",
     "@nestjs/common": "10.3.9",
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
@@ -39,14 +40,17 @@
     "@nestjs/platform-express": "10.3.9",
     "@nestjs/swagger": "7.3.1",
     "@nestjs/typeorm": "10.0.2",
+    "axios": "1.7.2",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cloudinary": "2.2.0",
     "dotenv": "16.4.5",
+    "google-auth-library": "9.11.0",
     "joi": "17.13.1",
     "nanoid": "3.3.7",
     "passport": "0.7.0",
+    "passport-google-oauth": "2.0.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "pg": "8.12.0",
@@ -63,6 +67,7 @@
     "@types/jest": "29.5.12",
     "@types/multer": "1.4.11",
     "@types/node": "20.14.2",
+    "@types/passport-google-oauth20": "2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "1.0.38",
     "@types/supertest": "6.0.2",
